force-app/main/default/src/objects/PJN_Metric_Type_Option__c/PJN_Metric_Type_Option__c.object-meta.xml
<CustomObject>
    <description>Defines options for a metric type</description>
    <label>Metric Type Option</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Metric Type Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metric Type Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>