force-app/main/default/src/objects/PJN_Metric_Type_Option__c/fields/PJN_Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Metric_Type__c</fullName>
    <description>The metric type this option is defined for</description>
    <label>Metric Type</label>
    <referenceTo>PJN_Metric_Type__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>PJN_Metric_Type_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>