force-app/main/default/src/objects/PJN_Metric_Type_Option__c/fields/PJN_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Order__c</fullName>
    <description>The order this option should appear in the picklist.</description>
    <inlineHelpText>The order this option should appear in the picklist.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>