force-app/main/default/src/objects/PJN_Metric_Type_Option__c/fields/PJN_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Value__c</fullName>
    <description>Provide a value, if different from the value in the name field.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide a value, if different from the value in the name field.</inlineHelpText>
    <label>Value (if different from name)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>